@@ -3,9 +3,11 @@
 * in development
 
 ** Additions
-
    + =evil-numbers-use-cursor-at-end-of-number= option to match numbers directly before the cursor
      (diverging from VIM's default behavior).
+
+** Fixes
+   + Fix #27 Number directly before the cursor manipulated when the cursor can't move forward.
 
 * 0.6
 
